Navbar and common css added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
 </head>
 <body>
     <!-- Header Section Start -->
-     <header>
-
+     <header id="header">
+        <div class="container">
+            <!-- nav section start -->
+            <nav id="navbar">
+                <div class="row">
+                    <h2 class="sec_sub_ttl">Sheikh Monir</h2>
+                    <button class="btn">Download Resume</button>
+                </div>
+            </nav>
+            <!-- nav section End -->
+            <!-- Banner section Start -->
+             <section id="banner_sec">
+                <div class="container center">
+                    <h1 class="sec_ttl">"In the near future, I hope to become a Developer."</h1>
+                    <p class="sec_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <button class="btn">Contact with me</button>
+                </div>
+             </section>
+            <!-- Banner section End -->
+        </div>
      </header>
     <!-- Header Section Start -->
     <!-- Main Section Start-->
