--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
                     <button class="btn">Download Resume</button>
                 </div>
             </nav>
+        </div>
             <!-- nav section End -->
             <!-- Banner section Start -->
              <section id="banner_sec">
                 <div class="container center">
-                    <h1 class="sec_ttl">"In the near future, I hope to become a Developer."</h1>
-                    <p class="sec_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                    <button class="btn">Contact with me</button>
+                    <img src="assets/Group.png" alt="">
+                    <h1 class="sec_ttl">"In the near future, I hope to <br>become a Developer."</h1>
+                    <p class="sec_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+                    <button class="btn" href="#footer">Contact with me</button>
                 </div>
              </section>
             <!-- Banner section End -->
-        </div>
      </header>
     <!-- Header Section Start -->
     <!-- Main Section Start-->
