--- a/index.html
+++ b/index.html
@@ -22,24 +22,73 @@
         </div>
             <!-- nav section End -->
             <!-- Banner section Start -->
-             <section id="banner_sec">
+            <section id="banner_sec">
                 <div class="container center">
                     <img src="assets/Group.png" alt="">
                     <h1 class="sec_ttl">"In the near future, I hope to <br>become a Developer."</h1>
-                    <p class="sec_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+                    <p class="sec_text">As a Web Developer is a great way to Develop My skill.<br> There is so much to learn as a web developer.<br> If you want  not impossible to know anything</p>
                     <button class="btn" href="#footer">Contact with me</button>
                 </div>
-             </section>
+            </section>
             <!-- Banner section End -->
      </header>
     <!-- Header Section Start -->
     <!-- Main Section Start-->
-    <main>
-
+    <main id="main">
+        <!-- developer section start -->
+        <section id="developer">
+            <div class="container">
+                <h2 class="sec_ttl center">Why Web Development??</h2>
+                <p class="sec_text center">Web developers provide businesses with the unique,engaging websites they <br> need to connect with customers.</p>
+                <div class="developer_item_1">
+                    <div class="row">
+                        <div class="developer_item-text">
+                            <h3 class="sec_sub_ttl_2">I will Do Coding and Change The<br> World</h3>
+                            <div class="sec_text">Without coding, we wouldn't have the websites,<br>apps, and programs we rely on daily.</div>
+                            <a class="btn" href="https://www.quora.com/How-can-a-programmer-change-the-world" target="_blank" rel="noopener noreferrer">Learn More</a>
+                        </div>
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+                <div class="developer_item_2">
+                    <div class="row">
+                        <img src="assets/Group 3.png" alt="">
+                        <div class="developer_item-text">
+                            <h3 class="sec_sub_ttl_2">I will help People by creating <br>Modern Web System</h3>
+                            <div class="sec_text">Modern web application architecture is crucial <br>when developing high-performing and scalable <br>solutions</div>
+                            <a class="btn" href="https://www.zend.com/blog/modern-web-application" target="_blank" rel="noopener noreferrer">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="developer_item_3">
+                    <div class="row">
+                        <div class="developer_item-text">
+                            <h3 class="sec_sub_ttl_2">I will Crate web system development process</h3>
+                            <div class="sec_text">Web development is a comprehensive process involving <br>several ideations and implementation stages</div>
+                            <a class="btn" href="https://www.turing.com/resources/web-development-process" target="_blank" rel="noopener noreferrer">Learn More</a>
+                        </div>
+                        <img src="assets/Group 4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Inspiration section start-->
+        <section id="inspiration">
+            <div class="container">
+                <h2 class="sec_ttl center">My Inspiration</h2>
+                <p class="sec_text center">Programming is a passion and it is an art that shows how creative you can <br>be and this feel kept me aloof from quitting also I wanted to <br>become as good as them</p>
+                <div class="inspiration_info center">
+                    <iframe width="100%"height="550"  src="https://www.youtube.com/embed/5O5e0nnVulY?si=C7DpOc7ukZ-E_hRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <!--  -->
+        <!--Inspiration section End-->
+        <!-- developer section end -->
     </main>
     <!-- Main Section End-->
     <!-- Footer Section Start -->
-    <footer>
+    <footer id="footer">
 
     </footer>
     <!-- Footer Section End -->
