--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="assets/Group.png" alt="">
                     <h1 class="sec_ttl">"In the near future, I hope to <br>become a Developer."</h1>
                     <p class="sec_text">As a Web Developer is a great way to Develop My skill.<br> There is so much to learn as a web developer.<br> If you want  not impossible to know anything</p>
-                    <button class="btn" href="#footer">Contact with me</button>
+                    <a class="btn" href="#footer">Contact with me</a>
                 </div>
             </section>
             <!-- Banner section End -->
@@ -129,7 +129,16 @@
     <!-- Main Section End-->
     <!-- Footer Section Start -->
     <footer id="footer">
-
+        <div class="container">
+            <div class="row">
+                <p class="footer_text">An Open Commitment by Sheikh Monir</p>
+                <div class="icon row">
+                    <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+                    <a href="https://github.com/" target="_blank" ><img src="assets/github.png" alt=""></a>
+                    <a href="https://www.linkedin.com/" target="_blank" > <img src="assets/linkedin-icon 1.png" alt=""></a>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- Footer Section End -->
 </body>
