--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="developer_item_3">
                     <div class="row">
                         <div class="developer_item-text">
-                            <h3 class="sec_sub_ttl_2">I will Crate web system development process</h3>
+                            <h3 class="sec_sub_ttl_2">I will Create web system development process</h3>
                             <div class="sec_text">Web development is a comprehensive process involving <br>several ideations and implementation stages</div>
                             <a class="btn" href="https://www.turing.com/resources/web-development-process" target="_blank" rel="noopener noreferrer">Learn More</a>
                         </div>
@@ -120,7 +120,7 @@
                 <p class="sec_text text_secondary">I want to become a developer so please help me by <br> giveing right information</p>
                 <form action="" class="">
                     <input type="email" placeholder="Suggest me any feedback for me">
-                    <button class="btn" >Submit</button>
+                    <button class="btn">Submit</button>
                 </form>
             </div>
             
