--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer</title>
     <!-- Custom css  start-->
-     <link rel="stylesheet" href="css/style.css">
-     <!-- Custom css End -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Custom css End -->
 </head>
+
 <body>
     <!-- Header Section Start -->
-     <header id="header">
+    <header id="header">
         <div class="container">
             <!-- nav section start -->
             <nav id="navbar">
@@ -20,19 +22,20 @@
                 </div>
             </nav>
         </div>
-            <!-- nav section End -->
-            <!-- Banner section Start -->
-            <section id="banner_sec">
-                <div class="container center">
-                    <img src="assets/Group.png" alt="">
-                    <h1 class="sec_ttl">"In the near future, I hope to <br>become a Developer."</h1>
-                    <p class="sec_text">As a Web Developer is a great way to Develop My skill.<br> There is so much to learn as a web developer.<br> If you want  not impossible to know anything</p>
-                    <br><br>
-                    <a class="btn" href="#footer">Contact with me</a>
-                </div>
-            </section>
-            <!-- Banner section End -->
-     </header>
+        <!-- nav section End -->
+        <!-- Banner section Start -->
+        <section id="banner_sec">
+            <div class="container center">
+                <img src="assets/Group.png" alt="">
+                <h1 class="sec_ttl">"In the near future, I hope to <br>become a Developer."</h1>
+                <p class="sec_text">As a Web Developer is a great way to Develop My skill.<br> There is so much to learn
+                    as a web developer.<br> If you want not impossible to know anything</p>
+                <br><br>
+                <a class="btn" href="#footer">Contact with me</a>
+            </div>
+        </section>
+        <!-- Banner section End -->
+    </header>
     <!-- Header Section Start -->
     <!-- Main Section Start-->
     <main id="main">
@@ -40,13 +43,16 @@
         <section id="developer">
             <div class="container">
                 <h2 class="sec_ttl center">Why Web Development??</h2>
-                <p class="sec_text center">Web developers provide businesses with the unique,engaging websites they <br> need to connect with customers.</p>
+                <p class="sec_text center">Web developers provide businesses with the unique,engaging websites they <br>
+                    need to connect with customers.</p>
                 <div class="developer_item_1">
                     <div class="row">
                         <div class="developer_item-text">
                             <h3 class="sec_sub_ttl_2">I will Do Coding and Change The<br> World</h3>
-                            <div class="sec_text">Without coding, we wouldn't have the websites,<br>apps, and programs we rely on daily.</div>
-                            <a class="btn" href="https://www.quora.com/How-can-a-programmer-change-the-world" target="_blank" rel="noopener noreferrer">Learn More</a>
+                            <div class="sec_text">Without coding, we wouldn't have the websites,<br>apps, and programs
+                                we rely on daily.</div>
+                            <a class="btn" href="https://www.quora.com/How-can-a-programmer-change-the-world"
+                                target="_blank" rel="noopener noreferrer">Learn More</a>
                         </div>
                         <img src="assets/Layer_1.png" alt="">
                     </div>
@@ -56,8 +62,10 @@
                         <img src="assets/Group 3.png" alt="">
                         <div class="developer_item-text">
                             <h3 class="sec_sub_ttl_2">I will help People by creating <br>Modern Web System</h3>
-                            <div class="sec_text">Modern web application architecture is crucial <br>when developing high-performing and scalable <br>solutions</div>
-                            <a class="btn" href="https://www.zend.com/blog/modern-web-application" target="_blank" rel="noopener noreferrer">Learn More</a>
+                            <div class="sec_text">Modern web application architecture is crucial <br>when developing
+                                high-performing and scalable <br>solutions</div>
+                            <a class="btn" href="https://www.zend.com/blog/modern-web-application" target="_blank"
+                                rel="noopener noreferrer">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -65,8 +73,10 @@
                     <div class="row">
                         <div class="developer_item-text">
                             <h3 class="sec_sub_ttl_2">I will Create web system development process</h3>
-                            <div class="sec_text">Web development is a comprehensive process involving <br>several ideations and implementation stages</div>
-                            <a class="btn" href="https://www.turing.com/resources/web-development-process" target="_blank" rel="noopener noreferrer">Learn More</a>
+                            <div class="sec_text">Web development is a comprehensive process involving <br>several
+                                ideations and implementation stages</div>
+                            <a class="btn" href="https://www.turing.com/resources/web-development-process"
+                                target="_blank" rel="noopener noreferrer">Learn More</a>
                         </div>
                         <img src="assets/Group 4.png" alt="">
                     </div>
@@ -78,52 +88,59 @@
         <section id="inspiration">
             <div class="container">
                 <h2 class="sec_ttl center">My Inspiration</h2>
-                <p class="sec_text center">Programming is a passion and it is an art that shows how creative you can <br>be and this feel kept me aloof from quitting also I wanted to <br>become as good as them</p>
+                <p class="sec_text center">Programming is a passion and it is an art that shows how creative you can
+                    <br>be and this feel kept me aloof from quitting also I wanted to <br>become as good as them</p>
                 <div class="inspiration_info center">
-                    <iframe width="100%"height="550"  src="https://www.youtube.com/embed/5O5e0nnVulY?si=C7DpOc7ukZ-E_hRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="550"
+                        src="https://www.youtube.com/embed/5O5e0nnVulY?si=C7DpOc7ukZ-E_hRI" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
         <!--Inspiration section End-->
         <!-- Target section Start -->
-         <section id="target">
+        <section id="target">
             <div class="container">
                 <h2 class="sec_ttl center">My Current Target</h2>
-                <p class="sec_text center">My current goal is to learn everything I need to know to become a <br>web developer and not slack off at work.</p>
+                <p class="sec_text center">My current goal is to learn everything I need to know to become a <br>web
+                    developer and not slack off at work.</p>
                 <div class="row">
                     <div class="target_item item_1">
                         <img src="assets/html.png" alt="">
                         <h3 class="sec_sub_ttl">HTML</h3>
                         <p class="sec_text">HTML is the standard markup language for Web pages</p>
-                        <a href="https://www.w3schools.com/html/"target="_blank" class="link">Learn More</a>
+                        <a href="https://www.w3schools.com/html/" target="_blank" class="link">Learn More</a>
                     </div>
                     <div class="target_item item_2">
                         <img src="assets/css.png" alt="">
                         <h3 class="sec_sub_ttl">CSS</h3>
                         <p class="sec_text">CSS make style for layout and structuring in web pages</p>
-                        <a href="https://www.w3schools.com/css/"target="_blank" class="link">Learn More</a>
+                        <a href="https://www.w3schools.com/css/" target="_blank" class="link">Learn More</a>
                     </div>
                     <div class="target_item item_3">
                         <img src="assets/js.png" alt="">
                         <h3 class="sec_sub_ttl">JavaScript</h3>
                         <p class="sec_text">JavaScript is a high-level, often just-in-time compiled </p>
-                        <a href="https://www.w3schools.com/js/"target="_blank" class="link">Learn More</a>
+                        <a href="https://www.w3schools.com/js/" target="_blank" class="link">Learn More</a>
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- Target section End -->
         <!-- Support section start  -->
         <section id="support">
             <div class="container center">
                 <h2 class="sec_ttl text_secondary">I need Support</h2>
-                <p class="sec_text text_secondary">I want to become a developer so please help me by <br> giveing right information</p>
+                <p class="sec_text text_secondary">I want to become a developer so please help me by <br> giveing right
+                    information</p>
                 <form action="" class="">
                     <input type="email" placeholder="Suggest me any feedback for me">
                     <button class="btn">Submit</button>
                 </form>
             </div>
-            
+
         </section>
         <!-- Support section End  -->
     </main>
@@ -135,12 +152,14 @@
                 <p class="footer_text">An Open Commitment by Sheikh Monir</p>
                 <div class="icon row">
                     <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
-                    <a href="https://github.com/" target="_blank" ><img src="assets/github.png" alt=""></a>
-                    <a href="https://www.linkedin.com/" target="_blank" > <img src="assets/linkedin-icon 1.png" alt=""></a>
+                    <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt=""></a>
+                    <a href="https://www.linkedin.com/" target="_blank"> <img src="assets/linkedin-icon 1.png"
+                            alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
     <!-- Footer Section End -->
 </body>
+
 </html>
