Project Final Finished

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <div class="container">
                 <h2 class="sec_ttl center">My Inspiration</h2>
                 <p class="sec_text center">Programming is a passion and it is an art that shows how creative you can
-                    <br>be and this feel kept me aloof from quitting also I wanted to <br>become as good as them</p>
+                    <br>be and this feel kept me aloof from quitting also I wanted to <br>become as good as them
+                </p>
                 <div class="inspiration_info center">
                     <iframe width="100%" height="550"
                         src="https://www.youtube.com/embed/5O5e0nnVulY?si=C7DpOc7ukZ-E_hRI" title="YouTube video player"
@@ -129,6 +130,58 @@
             </div>
         </section>
         <!-- Target section End -->
+        <!-- Next Target Section start -->
+        <section id="next_target">
+            <div class="container">
+                <h2 class="sec_ttl center">My Next Target</h2>
+                <p class="sec_text center">My Next Target is to learn everything
+                    what I need to know to become a <br> Next Level web
+                    developer and not slack off at work.</p>
+                <div class="next_target_desc">
+                    <div class="next_target_item">
+                        <div class="next_target_img">
+                            <img src="./assets/react.png" alt="">
+                        </div>
+                        <div class="next_target_info">
+                            <h3 class="sec_sub_ttl">ReactJS</h3>
+                            <p class="sec_text">React is the library for web and native user interfaces. Build user
+                                interfaces out of individual pieces called
+                                components written in JavaScript.</p>
+                            <a href="https://www.w3schools.com/REACT/DEFAULT.ASP" target="_blank" class="link">Learn
+                                More</a>
+                        </div>
+                    </div>
+                    <div class="next_target_item">
+                        <div class="next_target_img">
+                            <img src="./assets/nodejs.png" alt="">
+                        </div>
+                        <div class="next_target_info">
+                            <h3 class="sec_sub_ttl">NodeJs</h3>
+                            <p class="sec_text">Node.js is an open source server environment. Node.js allows you to run
+                                JavaScript on the server. Start learning Node.js
+                                now.</p>
+                            <a href="https://www.w3schools.com/nodejs/" target="_blank" class="link">Learn
+                                More</a>
+                        </div>
+                    </div>
+                    <div class="next_target_item">
+                        <div class="next_target_img">
+                            <img src="./assets/mongodb.png" alt="">
+                        </div>
+                        <div class="next_target_info">
+                            <h3 class="sec_sub_ttl">MongoDB</h3>
+                            <p class="sec_text">MongoDB is a document database. It stores data in a type of JSON format
+                                called BSON.A record in MongoDB is a document, which is a data structure composed of key
+                                value pairs similar to the structure of
+                                JSON objects.</p>
+                            <a href="https://www.w3schools.com/mongodb/" target="_blank" class="link">Learn
+                                More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Next Target Section End -->
         <!-- Support section start  -->
         <section id="support">
             <div class="container center">
